Smart split actions: also handle razor edit areas (REAPER v6.24+), fixes #1528
+Add RazorEditArea.hpp/.cpp (wrapper class for razor edit area API)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,6 +147,7 @@ add_library(sws SHARED
   Utility/Base64.cpp
   Utility/envelope.cpp
   Utility/hidpi.cpp
+  Utility/RazorEditArea.cpp
   Zoom.cpp
 )
 
